feat: 完成 Spring Boot + Vue3 前后端管理系统，集成 DM-Count 推理任务模块