@@ -3,6 +3,7 @@ package com.example.crowdsenseserver.config;
 import com.example.crowdsenseserver.security.JwtAuthenticationFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -12,6 +13,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -31,43 +33,122 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
+            // 开启 CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+            // 关闭 CSRF
             .csrf(csrf -> csrf.disable())
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
+            // JWT 无状态会话
+            .sessionManagement(session ->
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+
+            // 权限配置
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/auth/login", "/auth/register").permitAll()
-                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
-                .requestMatchers("/api/auth/login", "/api/auth/register").permitAll()
-                .requestMatchers("/api/swagger-ui/**", "/api/v3/api-docs/**").permitAll()
-                .requestMatchers("/api/files/**").permitAll()
-                .requestMatchers("/files/**").permitAll()
+
+                // 放行 OPTIONS 预检请求（解决 Swagger 403）
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                // 登录注册接口放行（同时带 /api 前缀和不带前缀，兼容不同匹配方式）
+                .requestMatchers(
+                        new AntPathRequestMatcher("/auth/login", "POST"),
+                        new AntPathRequestMatcher("/auth/register", "POST"),
+                        new AntPathRequestMatcher("/api/auth/login", "POST"),
+                        new AntPathRequestMatcher("/api/auth/register", "POST")
+                ).permitAll()
+
+                // Swagger 放行
+                .requestMatchers(
+                        "/swagger-ui/**",
+                        "/swagger-ui.html",
+                        "/v3/api-docs/**",
+                        "/webjars/**"
+                ).permitAll()
+
+                // 文件访问放行
+                .requestMatchers(
+                        "/files/**",
+                        "/api/files/**"
+                ).permitAll()
+
+                // Spring Boot 错误路径放行（防止 JSON 解析失败时内部转发 /error 被拦回 403）
+                .requestMatchers("/error").permitAll()
+
+                // 其余请求需要认证
                 .anyRequest().authenticated()
             )
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+            // JWT 过滤器
+            .addFilterBefore(
+                    jwtAuthenticationFilter,
+                    UsernamePasswordAuthenticationFilter.class
+            );
+
         return http.build();
     }
 
+    /**
+     * 跨域配置
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        // 允许前端来源（带凭证时不能用 *，需指定具体地址）
+        config.setAllowedOriginPatterns(List.of(
+                "http://localhost:5173",
+                "http://127.0.0.1:5173"
+        ));
+
+        // 允许请求方式
+        config.setAllowedMethods(Arrays.asList(
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "OPTIONS"
+        ));
+
+        // 允许请求头
         config.setAllowedHeaders(List.of("*"));
+
+        // 暴露响应头
+        config.setExposedHeaders(List.of("Authorization"));
+
+        // 允许携带 Cookie
         config.setAllowCredentials(true);
+
+        // 预检请求缓存时间
         config.setMaxAge(3600L);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
         source.registerCorsConfiguration("/**", config);
+
         return source;
     }
 
+    /**
+     * 密码加密器
+     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    /**
+     * AuthenticationManager
+     */
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration config
+    ) throws Exception {
+
         return config.getAuthenticationManager();
     }
 }
